# Camera

./: CMakeLists.txt  DataTypes.h  IAfmWindow.h  IApp.h  Notes.txt  README.md  build.sh
.github/workflows/: cmake.yml
internal/: AboutDialog.h  AfmWindow.h  App.h  Camera.h  Database.h  GPIO.h  ImageSettings.h  MainWindow.h  Persistence.h  PreferencesDialog.h  Table.h  handlers.h  util.h
resources/: Camera.glade  Camera.glade.bak
resources/old/: CameraApp.glade
src/: AboutDialog.cpp  AfmWindow.cpp  App.cpp  Camera.cpp  Database.cpp  GPIO.cpp  ImageSettings.cpp  MainWindow.cpp  Persistence.cpp  PreferencesDialog.cpp  Table.cpp  handlers.cpp  main.cpp  sdl_renderer.c  util.cpp
test/: Camera.glade  Camera.glade~  img.py  test.py  widg.py
